# SmartHome

Interlligense_HouseKeeper/: CMakeLists.txt  main.cpp
Interlligense_HouseKeeper/Test/: fileLearn.c  forLearning.c  pointerLearn.c  referenceLearn.cpp  switchLearn.c  test.c
Interlligense_HouseKeeper/chapter-Day01/: gradeOfScore.cpp  numGuess.cpp
Interlligense_HouseKeeper/chapter-Day01/static/: gradeOfScore.h  numGuess.h
Interlligense_HouseKeeper/chapter-Day02/: arrayLearning.cpp  controlStatement.cpp  opration.cpp
Interlligense_HouseKeeper/chapter-Day02/static/: arrayLearning.h  controlStatement.h  opration.h
Interlligense_HouseKeeper/chapter-Day03/: functionLearn.c  pointerLearn.c
Interlligense_HouseKeeper/chapter-Day04/: file1.txt  file2.txt  file_copy.c  main.c
Interlligense_HouseKeeper/chapter-Day04/static/: file_copy.h
Interlligense_HouseKeeper/chapter-Day05/: client_init.c  networkProgramming.c  server_init.c
Interlligense_HouseKeeper/chapter-Day05/static/: networkProgramming.h
